Issue 22: Fixed a bug in which the header menu overflowed on screens that are approximately 1000px wide.

--- a/themes/portfolio/portfolio.scss
+++ b/themes/portfolio/portfolio.scss
@@ -60,7 +60,7 @@ $hero-height: 100vh;
   height: 100%;
   padding: 10px 0;
   text-align: center;
-  width: 150px;
+  width: 125px;
 
   &:first-of-type, &:last-of-type {
     text-align: left;
